# arxiv-scanner

./: .gitignore  LICENSE  README.md  config.yaml  design-doc.md  pyproject.toml
docs/: cli-usage.md
src/arxiv_scanner/: config.py  main.py  storage.py
src/arxiv_scanner/core/: ingest.py  processor.py  translate.py
src/arxiv_scanner/llm/: provider.py
src/research_digest/: __init__.py  config.py  database.py  main.py  models.py
src/research_digest/core/: digest.py  filter.py  ingest.py  translate.py
src/research_digest/llm/: provider.py  rate_limiter.py
src/research_digest/reports/: generators.py
